php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68866 Incorrect sizeof
Submitted: 2015-01-20 19:25 UTC Modified: 2025-06-09 20:05 UTC
From: bugreports at internot dot info Assigned: nielsdos (profile)
Status: Closed Package: *General Issues
PHP Version: master-Git-2015-01-20 (Git) OS: Linux Ubuntu 14.04
Private report: No CVE-ID: None
 [2015-01-20 19:25 UTC] bugreports at internot dot info
Description:
------------
Hi,

In /main/network.c:


235        *sal = safe_emalloc((n + 1), sizeof(*sal), 0);

Should it be sizeof(**sal)? Or perhaps, sal = safe[..]?

Thanks,


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-01-28 16:17 UTC] laruence@php.net
hmm, sal is *** pointer... so...
 [2023-04-06 05:48 UTC] mikezoneusa at gmail dot com
Lifestyle Shopping Store are sharing latest news about lifestyle, fashion, shopping, clothing, wedding, dress etc. More info to visit: (https://lifestyleshoppingstore.com)github.com
 [2025-06-09 20:05 UTC] nielsdos@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: nielsdos
 [2025-06-09 20:05 UTC] nielsdos@php.net
The fix for this bug has been committed.
If you are still experiencing this bug, try to check out latest source from https://github.com/php/php-src and re-test.
Thank you for the report, and for helping us make PHP better.

Not harmful but fixed in active branches anyway. Thanks for reporting.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 01:00:01 2026 UTC